# audioplug-rs

./: .justfile  Cargo.toml  README.md  flake.nix  osx-bundler-au.sh  osx-bundler.sh
.cargo/: config.toml
examples/: au_test.rs  counter.rs  main.rs  standalone.rs  todo.rs  todo_mvc.rs  vst3-test.rs  widget_gallery.rs
examples/gain/: Cargo.toml
examples/gain/AU/: Info.plist  entitlements.plist
examples/gain/src/: lib.rs
examples/gain/vst3/: Info.plist
examples/synth/: Cargo.toml
examples/synth/AU/: Info.plist
examples/synth/src/: editor.rs  lib.rs  params.rs  voice.rs
examples/synth/src/views/: mod.rs
objc/: dummy_app.mm  view_controller.mm
src/: application.rs  audio_buffer.rs  audiolayout.rs  contexts.rs  cursor.rs  editor.rs  event.rs  id.rs  keyboard.rs  lib.rs  main.rs  message.rs  midi.rs  midi_buffer.rs  param.rs  platform.rs  plugin.rs  processor.rs  signal.rs  text.rs  theme.rs  view_old.rs  widget.rs  window.rs
src/animation/: mod.rs
src/app/: accessor.rs  animation.rs  app_state.rs  binding.rs  brush.rs  clipboard.rs  contexts.rs  diff.rs  effect.rs  event_channel.rs  event_handling.rs  host_handle.rs  layout.rs  memo.rs  mod.rs  overlay.rs  param.rs  param_signal.rs  parameter_wrapper.rs  reactive_context.rs  read_signal.rs  readable.rs  ref_count_map.rs  render.rs  runtime.rs  signal.rs  signal_range.rs  signal_vec.rs  traits.rs  trigger.rs  view.rs  view_sequence.rs  widget.rs  widget_data.rs  widget_node.rs  widget_ref.rs  widget_status.rs  window.rs
src/app/animation/: spring.rs  tween.rs
src/app/render/: brush.rs  canvas.rs  shape.rs  text.rs
src/core/: alignment.rs  axis.rs  border.rs  brush.rs  bvh.rs  color.rs  color_map.rs  constraint.rs  corner.rs  cursor.rs  diff.rs  edge.rs  ellipse.rs  gradient.rs  image.rs  interpolation.rs  keyboard.rs  length.rs  mod.rs  path.rs  point.rs  poly.rs  range.rs  rectangle.rs  root_finder.rs  rounded_rectangle.rs  shape.rs  size.rs  style.rs  taffy_compat.rs  text.rs  transform.rs  unit_point.rs  util.rs  vector.rs
src/dsp/: envelope.rs  mod.rs
src/mac/: application.rs  error.rs  iref.rs  mod.rs  renderer.rs  text.rs  view.rs  window.rs  window_state.rs
src/mac/appkit/: graphicscontext.rs
src/mac/core_graphics/: affine_transform.rs  color.rs  context.rs  mod.rs  path.rs
src/mac/core_text/: frame.rs  frame_setter.rs
src/param/: bool.rs  bypass.rs  float.rs  group.rs  int.rs  macros.rs  mod.rs  param_lens.rs  param_ref.rs  parameter_map.rs  string_list.rs  traversal.rs
src/platform/: brush.rs  mod.rs  shape.rs  shared.rs  text.rs  window_handle.rs
src/platform/linux/: application.rs  audio.rs  executor.rs  handle.rs  mod.rs  text.rs  window.rs
src/platform/linux/wayland/: application.rs  handle.rs  mod.rs  window.rs
src/platform/linux/x11/: application.rs  handle.rs  mod.rs  runloop.rs  window.rs
src/platform/mac/: application.rs  audio.rs  class_names.rs  conversions.rs  core_foundation.rs  dispatch.rs  error.rs  executor.rs  handle.rs  image.rs  iref.rs  keyboard.rs  mod.rs  renderer.rs  text.rs  util.rs  view.rs  window.rs  window_state.rs
src/platform/mac/appkit/: graphicscontext.rs  mod.rs
src/platform/mac/audio_toolbox/: audio_component.rs  audio_unit.rs  audio_unit_bus_array.rs  audio_unit_factory.rs  mod.rs  parameter_tree.rs  render_event.rs
src/platform/win/: application.rs  audio.rs  bitmap.rs  com.rs  conversions.rs  cursors.rs  executor.rs  filters.rs  geometry.rs  gradient.rs  handle.rs  image.rs  keyboard.rs  mod.rs  renderer.rs  text.rs  util.rs  window.rs
src/state/: accessor.rs  effect.rs  memo.rs  mod.rs  reactive_graph.rs  signal.rs
src/style/: builder.rs  display_style.rs  image_effect.rs  image_filter.rs  layout_style.rs  length.rs  mod.rs  style_builder.rs  ui_rect.rs
src/ui/: animation.rs  app_state.rs  clipboard.rs  event_handling.rs  host_handle.rs  layout.rs  mod.rs  overlay.rs  paint.rs  param.rs  reactive.rs  render.rs  task_queue.rs  view.rs  view_prop.rs  view_sequence.rs  widget.rs  widget_data.rs  widget_ref.rs  widget_status.rs  widget_tree.rs  widgets.rs  window.rs
src/ui/paint/: tiles.rs  wgpu_surface.rs
src/ui/reactive/: accessor.rs  animation.rs  cached.rs  computed.rs  contexts.rs  diff.rs  effect.rs  event_channel.rs  mod.rs  param.rs  reactive_value.rs  read_signal.rs  readable.rs  runtime.rs  signal_vec.rs  trigger.rs  tween.rs  var.rs  widget_status.rs
src/ui/render/: canvas.rs  gpu_scene.rs  gpu_types.rs  gradient_cache.rs  graphics_context.rs  mod.rs  scene.rs  wgpu_surface.rs
src/ui/style/: builder.rs  length.rs  mod.rs
src/util/: bounded_vec.rs  mod.rs
src/view/: any_view.rs  background.rs  button.rs  checkbox.rs  component.rs  container.rs  contexts.rs  filled.rs  id.rs  image.rs  label.rs  linear_layout.rs  message.rs  mod.rs  piano.rs  row.rs  scoped.rs  scroll.rs  shape.rs  slider.rs  stack.rs  styled.rs  switch.rs  textbox.rs  view.rs  view_node.rs  view_sequence.rs  widget_id.rs  xy_pad.rs
src/views/: background.rs  button.rs  canvas.rs  checkbox.rs  color.rs  column.rs  container.rs  dropdown.rs  filled.rs  image.rs  key_down.rs  knob.rs  label.rs  layout.rs  linear_layout.rs  list.rs  menu.rs  mod.rs  padding.rs  row.rs  scoped.rs  scroll.rs  show_if.rs  slider.rs  stack.rs  stateful.rs  styled.rs  switch.rs  textbox.rs  use_state.rs  util.rs  view_ext.rs  vstack.rs  xy_pad.rs
src/vst3/: audioprocessor.rs  editcontroller.rs  factory.rs  mod.rs  plugview.rs  util.rs
src/widgets/: mod.rs
src/win/: application.rs  audio.rs  com.rs  mod.rs  renderer.rs  text.rs  window.rs
src/wrapper/: mod.rs
src/wrapper/au/: audio_unit.rs  buffers.rs  mod.rs  render_event.rs  utils.rs  view_controller.rs
src/wrapper/auv3/: audio_unit.rs  mod.rs  render_event.rs  view_controller.rs
src/wrapper/clap/: factory.rs  features.rs  host.rs  mod.rs  plugin.rs
src/wrapper/standalone/: mod.rs
src/wrapper/vst3/: audio_busses.rs  audioprocessor.rs  category.rs  editcontroller.rs  factory.rs  host_application.rs  mod.rs  plugview.rs  shared_state.rs  util.rs
xtask/: Cargo.toml
xtask/src/: main.rs  settings.rs
(+52 files in other folders)
