[package]
name = "audioplug"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["examples/gain", "examples/synth", "xtask"]

[dependencies]
async-task = "4.7.1"
num = { version = "0.4.3" }
bitflags = "2.9.0"
vst3-sys = { git = "https://github.com/RustAudio/vst3-sys.git" }
raw-window-handle = "0.6.2"
unicode-segmentation = "1.12.0"
slotmap = "1.0.7"
taffy = "0.8.0"
rtrb = "0.3.2"
midi-consts = "0.1.0"
serde = "1.0.219"
atomic_refcell = "0.1.13"
indexmap = "2.8.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", features = [
	"Win32_Foundation",
	"Win32_Graphics_Dwm",
	"Win32_Graphics_Gdi",
	"Win32_UI_Accessibility",
	"Win32_UI_HiDpi",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_Media_Audio",
	"Win32_System",
	"Win32_System_Com",
	"Win32_System_Com_StructuredStorage",
	"Win32_System_DataExchange",
	"Win32_System_LibraryLoader",
	"Win32_System_Memory",
	"Win32_System_Ole",
	"Win32_System_Performance",
	"Win32_System_Threading",
	"Win32_System_Variant",
	"Win32_Security",
	"Win32_UI_Shell_PropertiesSystem",
	"Win32_Devices_Properties",
	"Win32_Graphics_Direct2D",
	"Win32_Graphics_Direct2D_Common",
	"Win32_Graphics_Dxgi_Common",
	"Foundation_Numerics",
	"Win32_Graphics_DirectWrite",
	"Win32_Graphics_Imaging",
] }
windows-numerics = "0.2.0"

[target.'cfg(target_os = "macos")'.dependencies]
c-enum = "0.2.3"
block2 = "0.6.0"
objc2 = "0.6.0"
objc2-foundation = { version = "0.3.0", features = [
	"NSAttributedString",
	"NSDictionary",
	"NSDate",
	"NSEnumerator",
	"NSExtensionRequestHandling",
	"NSIndexSet",
	"NSString",
	"NSTimer",
	"NSThread",
] }
objc2-app-kit = { version = "0.3.0", features = [
	"NSApplication",
	"NSRunningApplication",
	"NSGraphics",
	"NSImage",
	"NSImageRep",
	"NSEvent",
	"NSPasteboard",
	"NSResponder",
	"NSTrackingArea",
	"NSView",
	"NSViewController",
	"NSWindow",
] }
objc2-core-foundation = { version = "0.3.0", features = [
	"CFBase",
	"CFArray",
	"CFDictionary",
	"CFCGTypes",
	"CFNumber"
]}
objc2-core-graphics = { version  = "0.3.0", features = [
	"CGAffineTransform",
	"CGContext",
	"CGGeometry",
	"CGColor",
	"CGImage",
	"CGFont"
]}
objc2-core-text = { version = "0.3.0", features = [
	"CTFont",
	"CTFrame",
	"CTFramesetter",
	"CTLine"
]}
objc2-core-audio = { version = "0.3.0", features = []}
objc2-core-audio-types = { version = "0.3.0", features = [
	"CoreAudioBaseTypes"
]}
objc2-audio-toolbox = { version = "0.3.0", features = [
	"AUAudioUnit",
	"AUComponent",
	"AUParameters",
	"AudioUnitProperties",
	"block2",
	"objc2-core-audio-types"
]}
objc2-avf-audio = { version = "0.3.0", features = [
	"AVAudioFormat",
	"AVAudioTypes"
]}
