[package]
name = "audioplug"
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ "examples/gain", "examples/synth", "xtask"]

[dependencies]
arrayvec = "0.7.6"
async-task = "4.7.1"
atomic_refcell = "0.1.13"
bitflags = "2.10.0"
bytemuck = { version = "1.25.0", features = ["derive"]}
clap-sys = "0.5.0"
cosmic-text = "0.17.1"
env_logger = "0.11.8"
indexmap = "2.13.0"
log = "0.4.29"
midi-consts = "0.1.0"
num = { version = "0.4.3" }
pollster = "0.4.0"
raw-window-handle = "0.6.2"
rtrb = "0.3.2"
rustc-hash = "2.1.1"
serde = "1.0.228"
slotmap = "1.1.1"
smallvec = "1.15.1"
taffy = "0.9.1"
thiserror = "2.0.18"
unicode-segmentation = "1.12.0"
uuid = { version = "1.20.0", features = ["v4"] }
vst3 = "0.3.0"
wgpu = "28.0.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
	"Win32_Foundation",
	"Win32_Graphics_Dwm",
	"Win32_Graphics_Gdi",
	"Win32_UI_Accessibility",
	"Win32_UI_HiDpi",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_Media_Audio",
	"Win32_System",
	"Win32_System_Com",
	"Win32_System_Com_StructuredStorage",
	"Win32_System_DataExchange",
	"Win32_System_LibraryLoader",
	"Win32_System_Memory",
	"Win32_System_Ole",
	"Win32_System_Performance",
	"Win32_System_Threading",
	"Win32_System_Variant",
	"Win32_Security",
	"Win32_UI_Shell_PropertiesSystem",
	"Win32_Devices_Properties",
	"Win32_Graphics_Dxgi_Common",
	"Win32_Graphics_Direct3D",
	"Win32_Graphics_Direct3D11",
	"Foundation_Numerics",
	"Win32_Graphics_DirectWrite",
	"Win32_Graphics_Imaging",
] }
windows-core = "0.62.2"
windows-numerics = "0.3.1"

[target.'cfg(target_os = "macos")'.dependencies]
c-enum = "0.2.3"
block2 = "0.6.2"
objc2 = "0.6.3"
dispatch2 = "0.3.0"
objc2-foundation = { version = "0.3.2", features = [
	"NSAttributedString",
	"NSDictionary",
	"NSDate",
	"NSEnumerator",
	"NSExtensionRequestHandling",
	"NSIndexSet",
	"NSString",
	"NSTimer",
	"NSThread",
] }
objc2-app-kit = { version = "0.3.2", features = [
	"NSApplication",
	"NSRunningApplication",
	"NSGraphics",
	"NSImage",
	"NSImageRep",
	"NSEvent",
	"NSPasteboard",
	"NSResponder",
	"NSTrackingArea",
	"NSView",
	"NSViewController",
	"NSWindow",
] }
objc2-core-foundation = { version = "0.3.2", features = [
	"CFBase",
	"CFArray",
	"CFDictionary",
	"CFCGTypes",
	"CFNumber"
]}
objc2-core-graphics = { version  = "0.3.2", features = [
	"CGAffineTransform",
	"CGContext",
	"CGGeometry",
	"CGColor",
	"CGImage",
	"CGFont"
]}
objc2-core-image = { version = "0.3.2", features = [
	"CIContext",
	"CIImage",
	"CIKernel",
	"objc2-metal"
]}
objc2-core-text = { version = "0.3.2", features = [
	"CTFont",
	"CTFrame",
	"CTFramesetter",
	"CTLine"
]}
objc2-core-audio = { version = "0.3.2", features = []}
objc2-core-audio-types = { version = "0.3.2", features = [
	"CoreAudioBaseTypes"
]}
objc2-audio-toolbox = { version = "0.3.2", features = [
	"AUAudioUnit",
	"AUComponent",
	"AUParameters",
	"AudioUnitProperties",
	"block2",
	"objc2-core-audio-types"
]}
objc2-avf-audio = { version = "0.3.2", features = [
	"AVAudioFormat",
	"AVAudioTypes"
]}
objc2-metal = { version = "0.3.2", features = [
	"MTLDevice"
]}

[target.'cfg(target_os = "linux")'.dependencies]
wayland-backend = { version = "0.3.12", features = ["client_system"] }
wayland-client = "0.31.12"
x11rb = { version = "0.13.2", features = [
	# Allows using xcb via ffi
	"allow-unsafe-code",
	# Dynamicall load xcb
	"dl-libxcb"
] }

[dev-dependencies]
rand = "0.9.2"